benchmark/fixtures/compliant/SecurityGroupCompliant.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  MyLambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: MyLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: arn:aws:logs:*:*:*
              - Effect: Allow
                Action:
                  - ec2:RevokeSecurityGroupEgress
                  - ec2:DescribeSecurityGroups
                  - ec2:RevokeSecurityGroupIngress
                Resource: '*'

  MyLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.handler
      Role: !GetAtt MyLambdaExecutionRole.Arn
      Code:
        ZipFile: |
          import boto3
          import logging
          import os
          import json
          import urllib3

          http = urllib3.PoolManager()

          def send_response(event, context, response_status, response_data, reason=None):
              response_url = event['ResponseURL']
              
              response_body = {
                  'Status': response_status,
                  'Reason': reason or f"See the details in CloudWatch Log Stream: {context.log_stream_name}",
                  'PhysicalResourceId': context.log_stream_name,
                  'StackId': event['StackId'],
                  'RequestId': event['RequestId'],
                  'LogicalResourceId': event['LogicalResourceId'],
                  'Data': response_data
              }
              
              json_response_body = json.dumps(response_body)
              
              headers = {
                  'Content-Type': '',
                  'Content-Length': str(len(json_response_body))
              }
              
              try:
                  response = http.request('PUT', response_url, body=json_response_body, headers=headers)
                  print(f"Status code: {response.status}")
              except Exception as e:
                  print(f"send_response failed: {str(e)}")

          logger = logging.getLogger()
          logger.setLevel(logging.INFO)

          def handler(event, context):
              logger.info(f"Received event: {event}")
              
              try:
                  ec2 = boto3.client('ec2')
                  vpc_id = os.environ['VPC_ID']
                  
                  request_type = event['RequestType']
                  
                  if request_type in ['Create', 'Update']:
                      response = ec2.describe_security_groups(Filters=[
                          {'Name': 'vpc-id', 'Values': [vpc_id]},
                          {'Name': 'group-name', 'Values': ['default']}
                      ])
                      security_group = response['SecurityGroups'][0]
                      sg_id = security_group['GroupId']
                      
                      if security_group.get('IpPermissions'):
                          ec2.revoke_security_group_ingress(GroupId=sg_id, IpPermissions=security_group['IpPermissions'])
                      if security_group.get('IpPermissionsEgress'):
                          ec2.revoke_security_group_egress(GroupId=sg_id, IpPermissions=security_group['IpPermissionsEgress'])
                      
                      response_data = {'SecurityGroupId': sg_id}
                      send_response(event, context, 'SUCCESS', response_data)
                  
                  elif request_type == 'Delete':
                      # Optionally, handle resource cleanup during deletion
                      response_data = {}
                      send_response(event, context, 'SUCCESS', response_data)
              
              except Exception as e:
                  logger.error(f"Error occurred: {e}")
                  send_response(event, context, 'FAILED', {'Error': str(e)})
                  raise e

              return {
                  'statusCode': 200,
                  'body': json.dumps('Lambda function executed successfully!')
              }

      Runtime: python3.11
      Timeout: 300  
      Environment:
        Variables:
          VPC_ID: !ImportValue VPCID

  MyCustomResource:
    Type: Custom::MyCustomResource
    Properties:
      ServiceToken: !GetAtt MyLambdaFunction.Arn
      Action: "ManageSecurityGroup"
      VPC_ID: !ImportValue VPCID

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all traffic to the internet
      VpcId: !ImportValue VPCID
      SecurityGroupIngress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 65535
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 443
          ToPort: 443
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 80
          ToPort: 80
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 445
          ToPort: 445
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 27017
          ToPort: 27017
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 9200
          ToPort: 9200
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 8089
          ToPort: 8089
          CidrIp: 152.58.210.55/32
        - IpProtocol: UDP
          FromPort: 11211
          ToPort: 11211
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 9092
          ToPort: 9092
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 9300
          ToPort: 9300
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 3306
          ToPort: 3306
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 23
          ToPort: 23
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 5432
          ToPort: 5432
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 5601
          ToPort: 5601
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 6379
          ToPort: 6379
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 1433
          ToPort: 1433
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 9142
          ToPort: 9142
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 135
          ToPort: 135
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 5439
          ToPort: 5439
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 1521
          ToPort: 1521
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 21
          ToPort: 21
          CidrIp: 192.80.0.0/16
        - IpProtocol: TCP
          FromPort: 20
          ToPort: 20
          CidrIp: 192.80.0.0/16
        - IpProtocol: TCP
          FromPort: 22
          ToPort: 22
          CidrIp: 152.58.210.55/32
        - IpProtocol: TCP
          FromPort: 3389
          ToPort: 3389
          CidrIp: 152.58.210.55/32
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 65535
          CidrIp: 152.58.210.55/32

Outputs:
  MySecurityGroupOutputs:
    Description: Security Group Resource Id
    Value: !Ref MySecurityGroup

  MyLambdaExecutionRole:
    Description: My Lambda Execution Role Arn
    Value: !GetAtt MyLambdaExecutionRole.Arn

  MyLambdaFunction:
    Description: My Lambda Function Name
    Value: !Ref MyLambdaFunction

  MyCustomResource:
    Description: My Custom Resource
    Value: !Ref MyCustomResource

  DefaultSecurityGroupId:
    Description: The ID of the default security group in the specified VPC.
    Value: !GetAtt MyCustomResource.SecurityGroupId
